# xenon-engine

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  library.cpp  library.h
examples/: CMakeLists.txt
examples/basic_window/: Application.cpp  Application.hpp  CMakeLists.txt  Renderer.cpp  Renderer.hpp  basic_window.fs  basic_window.vs  main.cpp
examples/free_camera/: Application.cpp  Application.hpp  CMakeLists.txt  free_camera.vs  main.cpp
examples/model_loading/: Application.cpp  Application.hpp  CMakeLists.txt  main.cpp  model_loading.fs  model_loading.vs
include/: Camera.hpp  Engine.hpp  IApplication.hpp  IRenderer.hpp  Input.hpp  Mesh.hpp  Model.hpp  Renderer.hpp  Shader.hpp  Texture.hpp  Vertex.hpp  Window.hpp  library.hpp
shaders/: pass_through.fs  pass_through.vs
src/: Camera.cpp  Engine.cpp  IApplication.cpp  IRenderer.cpp  Input.cpp  Mesh.cpp  Model.cpp  Renderer.cpp  Shader.cpp  Texture.cpp  Window.cpp  library.cpp
test/: CMakeLists.txt  window_test.cpp
